# AGNfitter

./: RUN_AGNfitter_multi.py  main.py  pyproject.toml
example/: SETTINGS_AGNfitter.py
functions/: DATA_AGNfitter.py  MODEL_AGNfitter.py
