[project]
name = "agnfitter"
version = "0.1.0"
description = "Dependencies and modifications made to get the example execution file to run."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "acor>=1.1.1",
    "astropy>=6.0.1",
    "emcee>=3.1.6",
    "h5py>=3.14.0",
    "matplotlib>=3.9.4",
    "numpy<2.0",
    "pandas>=2.3.3",
    "scipy>=1.13.1",
    "ultranest>=4.5.0",
]
